kubernetes/adguardhome /02-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguardhome
  namespace: adguard
spec:
  serviceName: adguard-ui
  replicas: 1
  selector:
    matchLabels: { app: adguardhome }
  template:
    metadata:
      labels: { app: adguardhome }
    spec:
      containers:
      - name: adguard
        image: adguard/adguardhome:v0.107.64
        args: ["--no-check-update"]
        ports:
        - { name: dns-udp, containerPort: 53,  protocol: UDP }
        - { name: dns-tcp, containerPort: 53,  protocol: TCP }
        - { name: http,    containerPort: 3000, protocol: TCP }
        readinessProbe: { tcpSocket: { port: 3000 }, initialDelaySeconds: 5, periodSeconds: 10 }
        livenessProbe:  { httpGet: { path: "/", port: 3000 }, initialDelaySeconds: 30, periodSeconds: 30 }
        volumeMounts:
        - { name: data, mountPath: /opt/adguardhome/work, subPath: work }
        - { name: data, mountPath: /opt/adguardhome/conf, subPath: conf }
  volumeClaimTemplates:
  - metadata: { name: data }
    spec:
      accessModes: ["ReadWriteOnce"]
      resources: { requests: { storage: 2Gi } }
      storageClassName: longhorn
